<resources>
    <string name="app_name">FinalProject</string>

    <!-- Commonly used strings -->
    <string name="common_loginButton">Login</string>
    <string name="Common_eMail">Email</string>
    <string name="common_password">Password</string>
    <string name="common_confirmPassword">Confirm password</string>
    <string name="common_firstName">First name</string>
    <string name="common_lastName">Last name</string>
    <string name="common_homeUniversity">Home university</string>
    <string name="common_passwordRequirements">Password needs to contain the following: \n - Minimum 12 characters \n - At least one number, one special character, one capital and one small letter</string>
    <string name="common_cancelButton">Cancel</string>
    <string name="common_university">University</string>
    <string name="common_restaurant">Restaurant</string>

    <!-- loginScreen specific -->
    <string name="loginScreen_changeLanguage">Change language</string>
    <string name="loginScreen_EmailHint">Write your email here...</string>
    <string name="loginScreen_passwordHint">Write your password here...</string>
    <string name="loginScreen_CreateAccountButton">Create a new account</string>

    <!-- accountCreation specific -->
    <string name="accountCreation_appBar">Account creation</string>
    <string name="accountCreation_makeAccountButton">Make an account</string>

    <!-- authenticationView -->
    <string name="authenticationView_toolbar">Authentication</string>
    <string name="authenticationView_hintText">Write the number to the text field below,\n for 2-step authentication</string>

    <!-- mainView specific -->
    <string name="mainView_nextDay">Next day</string>
    <string name="mainView_currentDay">Current day</string>
    <string name="mainView_previousDay">Previous day</string>
    <string name="mainView_monday">Monday</string>
    <string name="mainView_tuesday">Tuesday</string>
    <string name="mainView_wednesday">Wednesday</string>
    <string name="mainView_thursday">Thursday</string>
    <string name="mainView_friday">Friday</string>
    <string name="mainView_saturday">Saturday</string>
    <string name="mainView_sunday">Sunday</string>

    <!-- sideMenu specific -->
    <string name="sideMenu_mainTitle">Main</string>
    <string name="sideMenu_userTitle">User</string>
    <string name="sideMenu_restaurantMenus">Restaurant menus</string>
    <string name="sideMenu_ownReviews">Own reviews</string>
    <string name="sideMenu_account">Account</string>
    <string name="sideMenu_settings">Settings</string>
    <string name="sideMenu_logOut">Log out</string>

    <!-- ownReviewsView specific -->
    <string name="ownReviewsView_vote">Votes</string>
    <string name="ownReviewsView_viewTitle">Your own reviews</string>
    <string name="ownReviewsView_publishedTitle">Reviews published by you</string>
    <string name="ownReviewsView_draftsTitle">Your review drafts</string>
    <string name="ownReviewsView_universityFilter">Filter reviews by university</string>
    <string name="ownReviewsView_restaurantFilter">Filter reviews by restaurant</string>
    <string name="ownReviewsView_sort">Sort by</string>
    <string name="ownReviewsView_food">Food</string>
    <string name="ownReviewsView_date">Date</string>
    <string name="ownReviewsView_restaurant">Restaurant</string>
    <string name="ownReviewsView_overallScore">Overall score</string>

    <!-- editReviewView specific -->
    <string name="editReviewView_taste">Taste</string>
    <string name="editReviewView_appearance">Appearance</string>
    <string name="editReviewView_texture">Texture</string>
    <string name="editReviewView_deleteReviewButton">Delete review</string>
    <string name="editReviewView_saveReviewButton">Save as a draft</string>
    <string name="editReviewView_publishReviewButton">Save and publish</string>
    <string name="editReviewView_HintText">Give a written review...</string>

    <!-- accountView specific -->
    <string name="accountView_editButton">Edit</string>

    <!-- editAccountInformationView specific -->
    <string name="editAccountInformationView_newPassword">New password</string>
    <string name="editAccountInformationView_confirmNewPassword">Confirm new password</string>
    <string name="editAccountInformationView_confirmCurrentPassword">Confirm changes with current password</string>
    <string name="editAccountInformationView_saveButton">Save changes</string>

    <!-- settingsView specific -->
    <string name="SettingsView_titleText">Here you can change the language</string>
    <string name="SettingsView_language">Language</string>
    <string name="SettingsView_changeLanguageButton">Change language</string>

    <!-- viewReviewView -->
    <string name="viewReviewView_upVote">Up vote</string>
    <string name="viewReviewView_downVote">Down vote</string>
    <string name="viewReviewView_deleteReview">Delete review</string>
    <string name="viewReviewView_hideReview">Hide review</string>

    <!-- viewReviewsView -->
    <string name="viewReviewsView_addReview">Add review</string>
    <string name="viewReviewsView_overallScore">Overall</string>
    <string name="viewReviewsView_userReviews">User reviews</string>

    <!-- Toasts -->
    <string name="toast_emailAlreadyInUse">User with that email already exists</string>
    <string name="toast_passwordAndConfirmationDontMatch">Password does not match password confirmation</string>
    <string name="toast_passwordRequirementsNotMet">Your password does not contains all the required characters</string>
    <string name="toast_reviewScoreAndTextEmpty">Can\'t publish a review with score of 0 without text</string>
    <string name="toast_reviewPublished">Your review was saved and published</string>
    <string name="toast_wrongAuthenticationNumber">Wrong authentication number, please try again</string>
    <string name="toast_saveReviewDraft">Your review was saved as a draft</string>
    <string name="toast_wrongPassword">Given password does not match your current password</string>
    <string name="toast_reviewRemovedUser">Your review was removed</string>
    <string name="toast_reviewRemovedAdmin">Review removed</string>
    <string name="toast_reviewHiddenAdmin">Review hidden</string>
    <string name="toast_multipleReviewsForOneFood">Can\'t create multiple reviews for one food. Go to "Own reviews" to edit your older review</string>
    <string name="toast_foodNotServedYet">Can\'t add a review for a food that has not yet been served</string>
    <string name="toast_invalidCredentials">Invalid email or password</string>
    <string name="toast_loggedOut">You have logged out</string>
    <string name="toast_EndOfMenu">End of monthly menu</string>

    <!-- navigationDrawer specific -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
</resources>
