<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/foodNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/overalLratingBar_foodReviewsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:isIndicator="true"
        app:layout_constraintEnd_toEndOf="@+id/allReviews_foodReviewsFragment"
        app:layout_constraintTop_toBottomOf="@+id/foodNameTextView" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/viewReviewsView_overallScore"
        app:layout_constraintBottom_toBottomOf="@+id/overalLratingBar_foodReviewsFragment"
        app:layout_constraintStart_toStartOf="@+id/allReviews_foodReviewsFragment"
        app:layout_constraintTop_toTopOf="@+id/overalLratingBar_foodReviewsFragment" />

    <ListView
        android:id="@+id/allReviews_foodReviewsFragment"
        android:layout_width="350dp"
        android:layout_height="325dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortingSpinner_foorReviewsFragment" />

    <Button
        android:id="@+id/addReviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/viewReviewsView_addReview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/allReviews_foodReviewsFragment"
        app:layout_constraintStart_toStartOf="@+id/allReviews_foodReviewsFragment"
        app:layout_constraintTop_toBottomOf="@+id/allReviews_foodReviewsFragment"
        app:layout_constraintVertical_bias="0.505" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/viewReviewsView_userReviews"
        app:layout_constraintEnd_toEndOf="@+id/allReviews_foodReviewsFragment"
        app:layout_constraintStart_toStartOf="@+id/allReviews_foodReviewsFragment"
        app:layout_constraintTop_toBottomOf="@+id/overalLratingBar_foodReviewsFragment" />

    <Spinner
        android:id="@+id/sortingSpinner_foorReviewsFragment"
        android:layout_width="350dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="@+id/allReviews_foodReviewsFragment"
        app:layout_constraintStart_toStartOf="@+id/allReviews_foodReviewsFragment"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ownReviewsView_sort"
        app:layout_constraintStart_toStartOf="@+id/sortingSpinner_foorReviewsFragment"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

</androidx.constraintlayout.widget.ConstraintLayout>